--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </header>
             <div id="about_css" class="hidden">
                 <div id="about_me"></div>
-                <h1>안녕하세요 oo라고 합니다.</h1>
+                <h1>안녕하세요 공리라고 합니다.</h1>
                 <h1>저는 게임, 컴퓨터 좋아하고요 </h1>
                 <h1>컴퓨터에 관심이 많습니다</h1>
                 <h1>그냥 대충 게임 번역일이나 코딩하고 있습니다</h1>
@@ -69,7 +69,7 @@
                         <img class="skillImg" src="./img/ts.png" />
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">현재 제가 번역하고 있는 프로젝트에요</h1>
+                <h1 class="hidden" id="trans">현재 제가 번역하고 있는 프로젝트입니다</h1>
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
                         <img class="skillImg" src="./img/hypixel.png" />
