--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     onclick="easteregg()"
                 />
                 <div id="site_top_name" class="hidden">
-                    <span>oo</span>
+                    <span>Project DumbOri</span>
                 </div>  
                 <div id="hi" class="hidden">
                     <h1>제 프로필 사이트에 오신것을 환영합니다.</h1>
