--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
             <footer>
                 <p id="copyright">
-                    &#169; Copyright 2023 noobnuby. All Rights Reserved.
+                    &#169; Copyright 2023 Dumb0ri. All Rights Reserved.
                 </p>
             </footer>
         </article>
