--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                         <img class="skillImg" src="./img/ts.png" />
                     </div>
                 </div>
+                <h1 class="hidden" id="trans">저는 현재 6개의 디스코드 서버를 관리하고 있습니다.
+                    </div>
+                </div>
                 <h1 class="hidden" id="trans">현재 제가 번역하고 있는 프로젝트입니다</h1>
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
