--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <img class="skillImg" src="./img/ts.png" />
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">저는 현재 6개의 디스코드 서버를 관리하고 있습니다.
+                <h1 class="hidden" id="trans">저는 현재 7개의 디스코드 서버를 관리하고 있습니다.
                     </div>
                 </div>
                 <h1 class="hidden" id="trans">현재 제가 번역하고 있는 프로젝트입니다</h1>
@@ -88,7 +88,7 @@
                 </div>            
             </div>
             <div id="link_css" class="hidden">
-                <h1>소셜 링크에요</h1>
+                <h1>소셜 링크입니다-디스코드</h1>
                 <h3>(마우스 커서를 위에 올리거나 클릭해보세요)</h3>
                 <div id="link_icon_css" class="hidden">
                     <div class="link">
