--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
                 <div id="about_me"></div>
                 <h1>안녕하세요 공리라고 합니다.</h1>
                 <h1>저는 게임, 컴퓨터 좋아하고요 </h1>
-                <h1>컴퓨터에 관심이 많습니다</h1>
-                <h1>그냥 대충 게임 번역일이나 코딩하고 있습니다</h1>
+                <h1>IT에 관심이 많습니다</h1>
+                <h1>코딩과 게임 번역하고 있습니다</h1>
             </div>
             <div id="skill_css">
                 <div id="skills"></div>
@@ -58,15 +58,19 @@
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
                         <img class="skillImg" src="./img/java.png" />
+                            <span id="hover" class="hover_">Java</span>
                     </div>
                     <div class="skillHidden skillBox seven">
                         <img class="skillImg" src="./img/js.png" />
+                            <span id="hover" class="hover_">자바스크립트</span>
                     </div>
                     <div class="skillHidden skillBox three">
                         <img class="skillImg" src="./img/C.png" />
+                            <span id="hover" class="hover_">C</span>
                     </div>
                     <div class="skillHidden skillBox three">
                         <img class="skillImg" src="./img/ts.png" />
+                            <span id="hover" class="hover_">타입스크립트</span>
                     </div>
                 </div>
                 <h1 class="hidden" id="trans">저는 현재 7개의 디스코드 서버를 관리하고 있습니다.
