--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <img class="skillImg" src="./img/ts.png" />                            
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">저는 현재 7개의 디스코드 서버를 관리하고 있습니다.
+                <h1 class="hidden" id="trans">저는 현재 8개의 디스코드 서버를 관리하고 있습니다. 관리 신청하시려면 아래 디스코드로 연락주세요.
                     </div>
                 </div>
                 <h1 class="hidden" id="trans">현재 제가 번역하고 있는 프로젝트입니다</h1>
