--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <h3>(마우스 커서를 위에 올리거나 클릭해보세요)</h3>
                 <div id="link_icon_css" class="hidden">
                     <div class="link">
-                        <span id="hover" class="hover_">Dumb#9943</span>
+                        <span id="hover" class="hover_">@goldumb</span>
                         <i class="fa-brands fa-discord" onclick="discordLink()"></i>
                     </div>
                 </div>
