--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                     <span>Project DumbOri</span>
                 </div>  
                 <div id="hi" class="hidden">
-                    <h1>제 프로필 사이트에 오신것을 환영합니다.</h1>
+                    <h1>Welcome to my profile website.</h1>
                 </div>
             </header>
             <div id="about_css" class="hidden">
                 <div id="about_me"></div>
-                <h1>안녕하세요 공리라고 합니다.</h1>
-                <h1>저는 게임, 컴퓨터 좋아하고요 </h1>
-                <h1>IT에 관심이 많습니다</h1>
-                <h1>코딩과 게임 번역하고 있습니다</h1>
+                <h1>Hello, my pronouns are he/him/dumb.</h1>
+                <h1>I am programming enthusiast</h1>
+                <h1>But I have lots of interest in IT as well.</h1>
+                <h1>I also do some translation works besides coding</h1>
             </div>
             <div id="skill_css">
                 <div id="skills"></div>
-                <h1 class="hidden">제가 현재 쓸 수 있는 코딩 언어입니다</h1>
+                <h1 class="hidden">These are the coding languages I can use</h1>
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
                         <img class="skillImg" src="./img/java.png" />                         
@@ -69,10 +69,10 @@
                         <img class="skillImg" src="./img/ts.png" />                            
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">RELIABLE WORKS
+                <h1 class="hidden" id="trans">I create high quality and reliable outcomes.
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">현재 제가 번역하고 있는 프로젝트입니다</h1>
+                <h1 class="hidden" id="trans">These are the projects I'm translating</h1>
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
                         <img class="skillImg" src="./img/hypixel.png" />
@@ -88,8 +88,8 @@
                 </div>            
             </div>
             <div id="link_css" class="hidden">
-                <h1>소셜 링크입니다 - 디스코드</h1>
-                <h3>(마우스 커서를 위에 올리거나 클릭해보세요)</h3>
+                <h1>This is my social link (Discord)</h1>
+                <h3>(Hover on the icon or click it to be redirected)</h3>
                 <div id="link_icon_css" class="hidden">
                     <div class="link">
                         <span id="hover" class="hover_">@goldumb</span>
