--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
             <div id="about_css" class="hidden">
                 <div id="about_me"></div>
                 <h1>Hello, my pronouns are he/him/dumb.</h1>
-                <h1>I am programming enthusiast</h1>
+                <h1>I am programming enthusiast,</h1>
                 <h1>But I have lots of interest in IT as well.</h1>
-                <h1>I also do some translation works besides coding</h1>
+                <h1>I also do some translation works besides coding.</h1>
             </div>
             <div id="skill_css">
                 <div id="skills"></div>
-                <h1 class="hidden">These are the coding languages I can use</h1>
+                <h1 class="hidden">Following are the coding languages I can use.</h1>
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
                         <img class="skillImg" src="./img/java.png" />                         
@@ -69,10 +69,10 @@
                         <img class="skillImg" src="./img/ts.png" />                            
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">I create high quality and reliable outcomes.
+                <h1 class="hidden" id="trans">I create reliable and high quality outcomes.
                     </div>
                 </div>
-                <h1 class="hidden" id="trans">These are the projects I'm translating</h1>
+                <h1 class="hidden" id="trans">Following are the projects I'm translating.</h1>
                 <div id="skill_img_css" class="hiddenImg">
                     <div class="skillHidden skillBox two">
                         <img class="skillImg" src="./img/hypixel.png" />
@@ -88,7 +88,7 @@
                 </div>            
             </div>
             <div id="link_css" class="hidden">
-                <h1>This is my social link (Discord)</h1>
+                <h1>This is my social link (Discord).</h1>
                 <h3>(Hover on the icon or click it to be redirected)</h3>
                 <div id="link_icon_css" class="hidden">
                     <div class="link">
