--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div id="about_css" class="hidden">
                 <div id="about_me"></div>
                 <h1>Hello, my pronouns are he/him/dumb.</h1>
-                <h1>I am programming enthusiast,</h1>
+                <h1>I am a programming enthusiast,</h1>
                 <h1>But I have lots of interest in IT as well.</h1>
                 <h1>I also do some translation works besides coding.</h1>
             </div>
