--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>DumbOri's profile</title>
+        <title>Goldumb's profile</title>
         <script defer src="index.js"></script>
         <link href="style.css" rel="stylesheet" />
         <link rel="icon" href="./favicon.ico" />
@@ -39,7 +39,7 @@
                     onclick="easteregg()"
                 />
                 <div id="site_top_name" class="hidden">
-                    <span>Project DumbOri</span>
+                    <span>Project Goldumb</span>
                 </div>  
                 <div id="hi" class="hidden">
                     <h1>Welcome to my profile website.</h1>
