--- a/index.html
+++ b/index.html
@@ -101,9 +101,10 @@
 
             <footer>
                 <p id="copyright">
-                    &#169; Copyright 2023 Dumb0ri. All Rights Reserved.
+                    &#169; Copyright 2025 Goldumb. All Rights Reserved.
                 </p>
             </footer>
         </article>
     </body>
 </html>
+
